--- a/Werkstuk versie 1.tex
+++ b/Werkstuk versie 1.tex
@@ -40,7 +40,7 @@
 	
 	\newtheorem{Tunnell}{Theorem}
 	\begin{Tunnell}
-		\text{\cite{oort_p3}} (Tunnell, 1983) If $n$ is a squarefree and odd (respectively, even) positive integer ans $n$ is the area of a right triangle with rotional sides, then
+		\text{\cite{oort_p3}} (Tunnell, 1983) If $n$ is a squarefree and odd (respectively, even) positive integer ans $n$ is the area of a right triangle with rational sides, then
 		\begin{align}
 		\#\{x,y,z\in\ZZ|n=2x^2+y^2+32z^2\} = \frac{1}{2}\#\{x,y,z\in\ZZ|n=2x^2+y^2+8z^2\}\\
 		\notag \text{(respectively, } \\
@@ -54,6 +54,13 @@
 		Een positief geheel getal $N$ heet een congruent getal als er een rechthoekige driehoek bestaat met lengtes van zijden in $\QQ_{>0}$ en met oppervlak gelijk aan $N\in\ZZ$. Noem de lengtes van de zijden $a,b,c\in\QQ$; met behulp van de stelling van Pythagoras zien we:
 		
 	\end{CG}
+	
+	
+	\section{Elliptische krommen}
+	
+	Elliptische krommen zijn krommen die voldoen aan de vergelijking $y^2=x^3-N^2x$. 
+	
+	
 	
 	
 	\bibliographystyle{plain}
