--- a/bib.bib
+++ b/bib.bib
@@ -1,1 +1,1 @@
-@BOOK{Koblitz_p221,AUTHOR={Neal Koblitz},TITLE={{I}ntroduction to {E}lliptic {C}urves and {M}odular {F}orms},YEAR={1984},PUBLISHER={Springer-Verlag New York Inc.},PAGES={221),},@MISC{Oort_p3,AUTHOR={Frans Oort},TITLE={{C}ongruente getallen},YEAR={2009},MONTH={februari},NOTE={Utrecht. Verkregen op 24-11-2015 van \url{http://www.staff.science.uu.nl/~oort0109/Kaleid-II-09-kortetekst.pdf}},PAGES={3},},@ARTICLE{paul2,AUTHOR={A. Menychtas; D. Kyriazis; K. Tserpes},TITLE={{R}eal-time reconfiguration for guaranteeing {Q}o{S} provisioning levels in {G}rid environments},YEAR={2008},JOURNAL={Future Generation Computer Systems},VOLUME={25},NUMBER={7},NOTE={Department of Electrical and Computer Engineering, National Technical University of Athens, Greece. Verkregen op 17-10-2015 van \url{http://www.sciencedirect.com/science/article/pii/S0167739X0800191X}},PAGES={},},
+@BOOK{Koblitz,AUTHOR={Neal Koblitz},TITLE={{I}ntroduction to {E}lliptic {C}urves and {M}odular {F}orms},YEAR={1984},PUBLISHER={Springer-Verlag New York Inc.},PAGES={3,221},},@MISC{Oort,AUTHOR={Frans Oort},TITLE={{C}ongruente getallen},YEAR={2009},MONTH={februari},NOTE={Urecht. Verkregen op 24-11-2015 van \url{http://www.staff.science.uu.nl/~oort0109/Kaleid-II-09-kortetekst.pdf}},PAGES={3},},@ARTICLE{paul2,AUTHOR={A. Menychtas; D. Kyriazis; K. Tserpes},TITLE={{R}eal-time reconfiguration for guaranteeing {Q}o{S} provisioning levels in {G}rid environments},YEAR={2008},JOURNAL={Future Generation Computer Systems},VOLUME={25},NUMBER={7},NOTE={Department of Electrical and Computer Engineering, National Technical University of Athens, Greece. Verkregen op 17-10-2015 van \url{http://www.sciencedirect.com/science/article/pii/S0167739X0800191X}},PAGES={},},
