--- a/Werkstuk versie 1.tex
+++ b/Werkstuk versie 1.tex
@@ -37,13 +37,19 @@
 	
 	\section{Inleiding}
 	
-	
 	\section{Begrippen}
 	\begin{tabular}{ l p{10cm} }
 		\textbf{kwadraatvrij}: \cite{Beukers} & Een kwadraatvrij getal is een getal dat niet deelbaar is door een kwadraat groter dan $1$. Waarbij een kwadraat een getal $k\in\NN$ zodat $\sqrt{k}\in\NN$.\\
 		\textbf{begrip}: & uitleg \\
 		\textbf{begrip}: & uitleg
 	\end{tabular}
+	
+	\section{Daan}
+	
+	
+	
+	
+	%\section{Daan}
 	
 	\section{Stelligen}
 	
