--- a/Werkstuk versie 1.tex
+++ b/Werkstuk versie 1.tex
@@ -52,7 +52,7 @@
 	\section{Daan}
 	
 	Stel, $\exists \delta \in \QQ$. Een getal $n \in \NN$ heet een congruent getal als $\delta^2 - n$, $\delta^2$ en $\delta^2 + n$ kwadraten zijn in \QQ. Dat wil zeggen, $\delta^2 - n$, $\delta^2$ en $\delta^2 + n$ zijn te schrijven als $\left(\dfrac{p}{q}\right)^2$ met $p, q \in \NN$\\
-	Een getal dat aan deze definitie voldoet is het getal 5, dus we stellen $n = 5$. We nemen $\delta = \dfrac{41}{12}$. Dan is $\delta^2 = \left( \dfrac{41}{12} \right)^2, \delta^2 - n = \dfrac{1681}{144} - 5 = \dfrac{961}{144} = \left( \dfrac{31}{12}\right)^2	en  \delta^2 + n = \dfrac{1681}{144} + 5 = \dfrac{2401}{144} = \left( \dfrac{48}{12}\right)^2
+	Een getal dat aan deze definitie voldoet is het getal 5, dus we stellen $n = 5$. We nemen $\delta = \dfrac{41}{12}$. Dan is $\delta^2 = \left( \dfrac{41}{12} \right)^2, \delta^2 - n = \dfrac{1681}{144} - 5 = \dfrac{961}{144} = \left( \dfrac{31}{12}\right)^2	en  \delta^2 + n = \dfrac{1681}{144} + 5 = \dfrac{2401}{144} = \left( \dfrac{48}{12}\right)^2$
 	
 	%\section{Daan}
 	
