--- a/Werkstuk versie 2.tex
+++ b/Werkstuk versie 2.tex
@@ -115,6 +115,35 @@
 	We kunnen met de theorie van Tunnnell precies controleren welke pythagore\"ise drietallen bij een congruent getal horen. Hiervoor moeten we wel iets aannemen wat te maken heeft met elliptische krommen. Gebruik makend van de elliptische krommen, moet gelden dat een paar rationele getallen $(x,y)$ van een congruente driehoek met zijden $x,y,z$, moet voldoen aan de vergelijking: $y^2=x^3-n^2x$.
 	
 	
+	\section{Presentaties van congruente getallen}
+	{\color{red}We weten al dat ieder congruent getal afhangt van een Pythagore\"isch drietal}, welke de presentatie wordt genoemd. Maar is dat een uniek drietal? En zo niet, hoeveel presentaties zijn er dan? Dat zijn de vragen waar we nu naar gaan kijken.\\
+	
+	Belangrijk is dat we eerst op \'e\'en lijn zitten, aangaande wat wel een Pythagore\"isch drietal is. Hier is een Pythagore\"isch drietal van de vorm $(x,y,z)$, waarbij $x,y,z\in \QQ_{>0}$ en $x^2 + y^2 = z^2$. Het bijbehorende congruente getal noemen we $N$, waarbij uiteraard geldt dat $N\in \QQ_{>0}$ (immers, $N = xy / 2$).\\
+	
+	Het is dus ook niet moeilijk te zien dat een congruent getal meerdere presentaties kan hebben. Neem bijvoorbeeld het getal 210, een presentatie daarvan is $(20,21,29)$, immers $(20\cdot 21)/2 = 210$. Een andere presentatie is $(12,35,37)$. En hoewel dit slechts \'e\'en getal is, is het desalniettemin zeer aannemelijk dat ieder congruent getal meerdere presentaties heeft. Sterker nog, ieder congruent getal heeft oneindig veel presentaties.\\
+	
+	Met de huidige definitie van "presentatie" is dat moeilijk na te gaan. Om het allemaal wat makkelijker te maken, gebruiken we een nieuwe definitie, gebaseerd op {\color{red}de stelling van Euclides}. We kiezen het positieve gehele getal $D$ dan zo dat $N=m\cdot n \cdot (m-n)^2/D^2$ een primitief congruent getal is. Hierbij zijn $m$ en $n$ zoals in de stelling van Euclides. (Ter herinnering: $m>n$, $ggd(m,n) = 1$ en $m+n$ is oneven.) Daarnaast geldt dat $x = m^2 - n^2$, $y = 2mn$ en $z = m^2 + n^2$.) In dit geval is de presentatie van het congruente getal dan $((m,n),D,N)$. Immers $D^2N = m\cdot n \cdot (m-n)^2$ en $xy/2 = D^2N$.\\
+	
+	Om nu te bewijzen dat ieder congruent getal oneindig veel presentaties heeft, moeten we eerst wat rekenwerk doen. We defini\"eren eerst:
+	\begin{equation}
+		U:= z^2=(m^2+n^2)^2, \qquad V:= 2xy=2(m^2-n^2)2mn
+	\end{equation}
+	Dit zijn de bouwstenen waar we straks een nieuwe presentatie mee gaan vormen voor ons congruente getal. Dat doen we als volgt:
+	\begin{align}
+			U\cdot V \cdot (U-V) \cdot (U+V)=\\
+			z^2\cdot 2xy\cdot (y^2+y^2-2xy)\cdot (x^2+y^2+2xy)=\\
+			2xy\cdot z^2\cdot (x-y)^2\cdot (x+y)^2=\\
+			\{2\cdot z\cdot D\cdot (x-y)\cdot (x+y)\}^2\cdot N
+	\end{align}
+	We hebben zo een nieuwe presentatie gevonden van $N$, waarbij een nieuw Pythagore\"isch drietal hoort (voor het gemak $(a,b,c)$ genoemd). Hierbij geldt:
+	\begin{equation}
+		U'=c^2, \qquad V'=2ab, \qquad E=|\{2\cdot z\cdot D\cdot (x-y)\cdot (x+y)\}|
+	\end{equation}
+	Wat opvalt is dat $E>D$.\\
+	
+	We kunnen deze methode herhalen met $U'$, $V'$ en $E$, en zo weer een nieuwe presentatie vinden. Met die nieuwe presentatie kunnen we weer een nieuwe presentatie vinden, enzovoort. In feite kunnen we het dus oneindig vaak herhalen, waarbij we steeds een nieuwe presentatie vinden. Ergo: ieder congruent getal bevat oneindig veel presentaties.
+	
+	
 	\section{Stellingen}
 	\newtheorem{Tunnell}{Theorem}
 	\begin{Tunnell}
@@ -156,6 +185,8 @@
 		\end{tikzpicture}
 		\end{figure*}\\
 	\end{CG}
+	
+	
 	
 	
 	\bibliographystyle{plain}
