--- a/Werkstuk versie 2.tex
+++ b/Werkstuk versie 2.tex
@@ -43,11 +43,21 @@
 		\textbf{begrip}: & uitleg
 	\end{tabular}
 	
-	\section{Congruente getallen en Pythagorese drietallen}
+	\section{Congruente getallen en Pythagore\"{i}se drietallen}
 	\section{Daan}
 	
-	Stel, $\exists \delta \in \QQ$. Een getal $n \in \NN$ heet een congruent getal als $\delta^2 - n$, $\delta^2$ en $\delta^2 + n$ kwadraten zijn in \QQ. Dat wil zeggen, $\delta^2 - n$, $\delta^2$ en $\delta^2 + n$ zijn te schrijven als $\left(\dfrac{p}{q}\right)^2$ met $p, q \in \NN$\\
-	Een getal dat aan deze definitie voldoet is het getal 5, dus we stellen $n = 5$. We nemen $\delta = \dfrac{41}{12}$. Dan is $\delta^2 = \left( \dfrac{41}{12} \right)^2, \delta^2 - n = \dfrac{1681}{144} - 5 = \dfrac{961}{144} = \left( \dfrac{31}{12}\right)^2	en  \delta^2 + n = \dfrac{1681}{144} + 5 = \dfrac{2401}{144} = \left( \dfrac{48}{12}\right)^2$
+	Een goede basis om mee te beginnen is een definitie voor congruente getallen te bepalen. Er zijn echter meerdere manieren om congruente getallen te defini\"{e}ren. We beginnen met een algebra\"{i}sche benadering. \\
+	Stel, $\exists \delta \in \QQ$. Een getal $n \in \NN$ heet een congruent getal als $\delta^2 - n$, $\delta^2$ en $\delta^2 + n$ kwadraten zijn in \QQ. Dat wil zeggen, $\delta^2 - n$, $\delta^2$ en $\delta^2 + n$ zijn te schrijven als $\left(\dfrac{p}{q}\right)^2$ met $p, q \in \NN$. \\
+	Een getal dat aan deze definitie voldoet is het getal 5, dus we stellen $n = 5$. We nemen $\delta = \dfrac{41}{12}$. Dan is $\delta^2 = \left( \dfrac{41}{12} \right)^2, \delta^2 - n = \dfrac{1681}{144} - 5 = \dfrac{961}{144} = \left( \dfrac{31}{12}\right)^2	en  \delta^2 + n = \dfrac{1681}{144} + 5 = \dfrac{2401}{144} = \left( \dfrac{48}{12}\right)^2$. Hieruit volgt dus dat $5$ een conguent getal is. \\
+	Een andere manier om congruente getallen te defini\"{e}ren is door er op een geometrische manier naar te kijken. Echter, om hier goed naar te kijken is het handig om eerst te kijken naar Pythagore\"{i}sche drietallen. \\
+	De geschiedenis van Pythagore\"{i}sche drietallen begint bij het vermoeden van Fermat. Dit vermoeden ziet er als volgt uit: \\
+	$ x^n + y^n = z^n$ met $n \in \NN$\\
+	Fermat vermoedde dat voor $n \geq 3$ er alleen triviale oplossingen staan voor bovenstaande vergelijking. Dat wil zeggen, $ \forall (x, y, z) \in \ZZ^3 $ en $ x^n + y^n = z^n $ met $ n \geq 3 $, dan geldt $ x \cdot y \cdot z = 0 $. \\
+	Wij zijn echter vooral ge\"{i}nteresseerd in het geval $ n = 2 $ en alle niet triviale oplossingen van de vergelijking $ x^2 + y^2 = z^2 $. Deze oplossingen noteren we als $ (x, y, z) $ en noemen we Pythagore\"{i}sche drietallen. Dit, omdat het vermoeden van Fermat met $ n = 2 $ de stelling van Pythagoras is. De niet-triviale oplossingen $ (x, y, z) $ van $ x^2 + y^2 = z^2 $ vormen dan ook een rechthoekige driehoek waarbij $ z $ de schuine zijde is. Een simpel voorbeeld van een Pythagore\"{i}sch drietal is $ (3, 4, 5) $, want $ 3^2 + 4^2 = 9 + 16 = 25 = 5^2 $. \\
+	Een speciaal soort Pythagore\"{i}sch drietal is het zogenaamde primitieve Pythagore\"{i}sch drietal. Dit is een Pythagore\"{i}sch drietal $ (x, y, z) $ waarvoor ook geldt dat $ ggd(x, y) = 1 $.
+	%bewijs dat ggd(x, z) en ggd(y, z) ook 1 zijn.
+	%Nog veel meer bewijzen over ppd's
+	%Tweede definitie congruente getallen
 	
 	%\section{Daan}
 	
